<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/sq_activity_drawer_layout_drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ui.activities.SQHomeActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/sq_widget_appbar"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/sq_activity_home_nestedscrollview_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sq_screen_home_textview_empty_label"/>
        </android.support.v4.widget.NestedScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sq_activity_home_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:visibility="gone"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sq_activity_home_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/sq_margin_fab"
            app:srcCompat="@drawable/sq_ic_new_24dp"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/sq_activity_drawer_navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/sq_shape_drawer_background"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/sq_widget_navigationview"
        app:itemBackground="@drawable/sq_selector_navigationview_item_background"
        app:itemIconTint="@drawable/sq_selector_navigationview_item"
        app:itemTextColor="@drawable/sq_selector_navigationview_item"
        app:menu="@menu/sq_menu_drawer"/>

</android.support.v4.widget.DrawerLayout>
